# python-nftables-monitor

./: .dockerignore  .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: python.yml
test/: test_python_nftables_monitor.py
